test/bad/functions/type08.px

func neg(Bool b: false) Bool def
    return not b

func f(Bool->Bool g) Bool def
    return g()

print f(neg)
